<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:fontFamily="@font/splash_font"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/login_img"
            android:layout_width="263dp"
            android:layout_height="246dp"
            android:src="@drawable/img_login"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/input_font"
            android:textSize="16sp"
            android:text="@string/text_username"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="14dp"
            android:layout_marginStart="14dp"
            app:layout_constraintTop_toBottomOf="@+id/login_img"
            app:layout_constraintBottom_toTopOf="@id/etUsername"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:background="@drawable/custom_input"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:layout_marginTop="8dp"
            android:focusableInTouchMode="true"
            app:layout_constraintTop_toBottomOf="@id/tvUsername"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/input_font"
            android:textSize="16sp"
            android:text="@string/text_password"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="14dp"
            android:layout_marginStart="14dp"
            app:layout_constraintTop_toBottomOf="@+id/etUsername"
            app:layout_constraintBottom_toTopOf="@id/etPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="15dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:background="@drawable/custom_input"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/ivTogglePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_visibility_off"
            android:contentDescription="@string/toggle_password"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="@id/etPassword"
            app:layout_constraintTop_toTopOf="@id/etPassword"
            app:layout_constraintBottom_toBottomOf="@id/etPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:fontFamily="@font/poppins_bold"
            android:textSize="18sp"
            android:padding="10dp"
            android:text="@string/login_title"
            android:layout_marginEnd="14dp"
            android:background="@drawable/custom_button"
            android:layout_marginTop="55dp"
            app:layout_constraintTop_toBottomOf="@+id/ivTogglePassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/signupSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/btnLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tvDontHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_dont_have_an_account"
                android:textSize="16sp"
                android:textColor="@color/dim_grey" />

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/text_sign_up"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins_bold"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>