<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.358" />

        <TextView
            android:id="@+id/registerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:gravity="center"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:fontFamily="@font/splash_font"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Label untuk Username -->
        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/input_font"
            android:textSize="16sp"
            android:text="@string/text_username"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="14dp"
            android:layout_marginStart="14dp"
            app:layout_constraintTop_toBottomOf="@id/registerTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- TextInputLayout untuk Username -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:id="@+id/usernameInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:helperTextTextColor="@android:color/holo_red_dark"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            app:layout_constraintTop_toBottomOf="@id/tvUsername"
            app:layout_constraintStart_toStartOf="parent"
            app:boxStrokeColor="@color/dim_grey"
            app:boxStrokeWidth="1.5dp"
            app:boxCornerRadiusTopStart="17dp"
            app:boxCornerRadiusTopEnd="17dp"
            app:boxCornerRadiusBottomStart="17dp"
            app:boxCornerRadiusBottomEnd="17dp"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/input_font"
            android:textSize="16sp"
            android:text="@string/text_email"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="14dp"
            android:layout_marginStart="14dp"
            app:layout_constraintTop_toBottomOf="@id/usernameInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Email -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:id="@+id/emailInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:layout_constraintTop_toBottomOf="@id/tvEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:boxStrokeColor="@color/dim_grey"
            app:boxStrokeWidth="1.5dp"
            app:boxCornerRadiusTopStart="17dp"
            app:boxCornerRadiusTopEnd="17dp"
            app:boxCornerRadiusBottomStart="17dp"
            app:boxCornerRadiusBottomEnd="17dp"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/input_font"
            android:textSize="16sp"
            android:text="@string/text_password"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="14dp"
            android:layout_marginStart="14dp"
            app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:id="@+id/passwordInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/tvPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:boxStrokeColor="@color/dim_grey"
            app:boxStrokeWidth="1.5dp"
            app:boxCornerRadiusTopStart="17dp"
            app:boxCornerRadiusTopEnd="17dp"
            app:boxCornerRadiusBottomStart="17dp"
            app:boxCornerRadiusBottomEnd="17dp"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvRePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/input_font"
            android:textSize="16sp"
            android:text="@string/text_confirm_password"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="14dp"
            android:layout_marginStart="14dp"
            app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <!-- Confirm Password -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:id="@+id/rePasswordInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/tvRePassword"
        app:layout_constraintStart_toStartOf="parent"
        app:boxStrokeColor="@color/dim_grey"
        app:boxStrokeWidth="1.5dp"
        app:boxCornerRadiusTopStart="17dp"
        app:boxCornerRadiusTopEnd="17dp"
        app:boxCornerRadiusBottomStart="17dp"
        app:boxCornerRadiusBottomEnd="17dp"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

        <!-- Sign Up Button -->
        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:fontFamily="@font/poppins_bold"
            android:textSize="18sp"
            android:padding="10dp"
            android:text="@string/text_sign_up"
            android:layout_marginEnd="14dp"
            android:background="@drawable/custom_button"
            android:layout_marginTop="55dp"
            app:layout_constraintTop_toBottomOf="@id/rePasswordInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/loginSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/btnSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tvHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_already_have_an_account"
                android:textSize="16sp"
                android:textColor="@color/dim_grey" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/login_title"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins_bold"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>